@@ -878,7 +878,7 @@ H5Pset_fill_value <- function( h5plist, value ) {
   tid <- switch(storage.mode,
                 double = h5constants$H5T["H5T_IEEE_F64LE"],
                 integer = h5constants$H5T["H5T_STD_I32LE"],
-                logical = h5constants$H5T["H5T_STD_U8LE"],
+                logical = h5constants$H5T["H5T_STD_I8LE"],
                 character = {
                     tid <- H5Tcopy("H5T_C_S1")
                     size <- nchar(value)+1
